[package]
authors = ["Corentin Henry <corentinhenry@gmail.com>"]
name = "netlink-packet-audit"
version = "0.4.2"
edition = "2018"

homepage = "https://github.com/rust-netlink/netlink-packet-audit"
keywords = ["netlink", "linux"]
license = "MIT"
readme = "../README.md"
repository = "https://github.com/rust-netlink/netlink-packet-audit"
description = "netlink packet types"

[dependencies]
anyhow = "1.0.31"
bytes = "1.0"
byteorder = "1.3.2"
log = "0.4.8"
netlink-packet-core = "0.5.0"
netlink-packet-utils = "0.5.2"
netlink-proto = { default-features = false, version = "0.11.0" }

[dev-dependencies]
lazy_static = "1.4.0"
