[package]
authors = ["Corentin Henry <corentinhenry@gmail.com>"]
name = "netlink-packet-audit"
version = "0.6.1"
edition = "2021"

homepage = "https://github.com/rust-netlink/netlink-packet-audit"
keywords = ["netlink", "linux"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/rust-netlink/netlink-packet-audit"
description = "netlink packet types"

[dependencies]
bytes = "1.0"
log = "0.4.8"
netlink-packet-core = "0.8.0"
netlink-proto = { default-features = false, version = "0.12" }

[dev-dependencies]
lazy_static = "1.4.0"
